// Generated from models.yaml - DO NOT EDIT MANUALLY
syntax = "proto3";

import "appget_common.proto";

option java_package = "dev.appget.hr.view";
option java_multiple_files = true;

package hr_views;

message DepartmentBudgetView {
  string department_id = 1;
  string department_name = 2;
  appget.common.Decimal department_budget = 3;
}
